Bug 1378759 - Improve the readability of table in about:telemetry r=chutten
Reduce the size of the sidebar to let more space available for the
actual content.

MozReview-Commit-ID: 5z1zwxC8Ys1

UltraBlame original commit: 05c454cb13f309efebdf07033c8efafd8b80b0de

--- a/toolkit/content/aboutTelemetry.css
+++ b/toolkit/content/aboutTelemetry.css
@@ -107,17 +107,17 @@ height
 #
 categories
 {
+min
+-
+width
+:
+250px
+;
 padding
 -
 top
 :
 0px
-;
-min
--
-width
-:
-300px
 ;
 overflow
 -
@@ -1292,7 +1292,103 @@ solid
 ;
 }
 th
+td
+table
 {
+text
+-
+align
+:
+start
+;
+border
+-
+collapse
+:
+collapse
+;
+}
+table
+{
+width
+:
+100
+%
+;
+font
+-
+size
+:
+15px
+;
+}
+td
+{
+padding
+-
+bottom
+:
+0
+.
+25em
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+border
+-
+color
+)
+;
+}
+tr
+:
+not
+(
+:
+first
+-
+child
+)
+:
+hover
+{
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+05
+)
+;
+}
+th
+{
+font
+-
+size
+:
+larger
+;
 font
 -
 weight
@@ -1305,11 +1401,13 @@ space
 :
 nowrap
 ;
-text
+padding
 -
-align
+bottom
 :
-left
+0
+.
+5em
 ;
 }
 body
